@@ -1,3 +1,11 @@
+2022-09-26T16:26:01Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3129397001
+* notice: last 14d: unq all: 2 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 184 347 / 207 382
+* notice: next accum: outdated-unq outdated-all / unq all: 184 347 / 207 381
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-09-12]
+
 2022-09-26T08:24:26Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3126185859
 * notice: last 14d: unq all: 2 35
